Goal: remove terminal setP and setQ in losses compensation  - Reformat observers in flow decompostion computer  - Reformat NetworkUtil
Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>